--- a/src/components/sections/hero/Hero.module.scss
+++ b/src/components/sections/hero/Hero.module.scss
@@ -1,10 +1,7 @@
 .wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
+  position: relative;
   width: 100%;
-  height: 90vh;
-  z-index: -1;
+  height: 89vh;
 
   .title {
     color: #e63e3a;
