--- a/src/components/sections/navigation/Nav.module.scss
+++ b/src/components/sections/navigation/Nav.module.scss
@@ -1,6 +1,23 @@
 .wrapper {
-  margin-top: 90vh;
-  width: 100%;
-  height: 600px;
   background-color: #e63e3a;
+  padding-bottom: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.title {
+  font-size: 135px;
+  line-height: 130px;
+  letter-spacing: -4.05px;
+  max-width: 835px;
+  margin-left: auto;
+  margin-bottom: 200px;
+  text-align: right;
+  font-weight: 400;
+}
+
+.info {
+  font-size: 22px;
+  line-height: 26px;
+  max-width: 320px;
 }
