--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,9 @@ html {
 
 body {
   font-family: "SuisseIntl";
+  font-style: normal;
   min-height: 100vh;
   font-weight: 400;
   margin: 0;
+  color: #101820;
 }
