--- a/src/components/sections/business-growth/BusinessGrowth.module.scss
+++ b/src/components/sections/business-growth/BusinessGrowth.module.scss
@@ -5,6 +5,9 @@
   padding-top: 90px;
   background-color: #fff;
 
+  display: flex;
+  flex-direction: column;
+
   .title {
     font-size: 82px;
     font-style: normal;
