--- a/src/components/sections/business-growth/BusinessGrowth.module.scss
+++ b/src/components/sections/business-growth/BusinessGrowth.module.scss
@@ -1,12 +1,19 @@
 .section {
-  height: 100vh;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 90px;
+  padding-bottom: 90px;
   background-color: #fff;
 
   display: flex;
   flex-direction: column;
+
+  .chartWrapper {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+  }
 
   .title {
     font-size: 82px;
